<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_background_white">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_40sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/waring_blurry_title"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_title_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:text="@string/waring_blurry_content"
        android:textColor="@color/tint_color"
        android:textSize="@dimen/_12sdp"
        android:textStyle="italic" />

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:layout_below="@id/txt_title_2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:text="@string/btn_continue"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/btn_new_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_1sdp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:text="@string/btn_new_image"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imv_icon"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_button"
        android:layout_marginLeft="@dimen/_10sdp"
        android:src="@mipmap/ic_waring_" />
</RelativeLayout>