<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_background_white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/txt_choose_your_card_language"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_13sdp"
        android:id="@+id/txt_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:text="Image quality: "
        android:gravity="center"
        android:textColor="@color/tint_color"
        android:id="@+id/txt_quality_title"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/txt_title"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_below="@id/txt_quality_title"
        android:text="The card is in: "
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/tint_color"
        android:id="@+id/txt_card_title"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_toRightOf="@id/txt_quality_title"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/txt_good"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textColor="@color/green_a_700"
        android:textSize="@dimen/_12sdp"
        android:id="@+id/txt_image_quality"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_below="@id/txt_title"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_quality_title"
        android:layout_toRightOf="@id/txt_quality_title"
        android:layout_marginLeft="@dimen/_10sdp"
        android:id="@+id/spinner_language"
        android:layout_marginTop="@dimen/_5sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:layout_below="@id/txt_card_title"
        android:id="@+id/layout_button"

        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/btn_cancel"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:layout_marginLeft="@dimen/_1sdp"
            android:textColor="@color/white"
            android:text="@string/btn_start"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/btn_start"
            />
    </LinearLayout>
</RelativeLayout>