<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_background_white"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txt_title"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:padding="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_40sdp"
        android:text="@string/confirmation"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/tint_color"
        android:id="@+id/txt_content_cancel"
        android:layout_below="@id/txt_title"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:textStyle="italic"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_37sdp"
        android:orientation="horizontal"
        android:layout_below="@id/txt_content_cancel"
        android:id="@+id/layout_button"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:text="@string/btn_no"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/btn_no"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/custom_button_black"
            android:layout_marginLeft="@dimen/_1sdp"
            android:textColor="@color/white"
            android:text="@string/btn_yes"
            android:textSize="@dimen/_12sdp"
            android:id="@+id/btn_yes"
            />
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="match_parent"
        android:src="@mipmap/ic_waring_"
        android:id="@+id/imv_icon"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_above="@id/layout_button"
        />
</RelativeLayout>